--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -27,7 +27,7 @@
     /**
      * default scope for all components in workspace.
      **/
-    "defaultScope": "chatterbox-labs.ai-chat"
+    "defaultScope": "chatterboxlabs.ai-chat"
   },
   /**
    * main configuration for component dependency resolution.
@@ -39,11 +39,14 @@
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
       "dependencies": {
-        "@teambit/cloud-providers.aspects.cloudflare-worker": "0.0.19",
-        "@testing-library/react": "^14.0.0",
-        "react-router-dom": "^6.13.0"
+        "@teambit/cloud-providers.aspects.cloudflare-worker": "0.0.19"
       },
-      "peerDependencies": {}
+      "peerDependencies": {
+        "@testing-library/react": "^12.1.5",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-router-dom": "^6.0.0"
+      }
     },
     "linkCoreAspects": true,
     "rootComponents": true
